# Vibe

./: .replit  HYPOTHESES_README.md  README.md  button_fixes_report.md  config.py  create_test_reflections.py  cvr_analyzer.py  cvr_autoanalyzer.py  cvr_iteration_4_report.md  db.py  debug_reflection_flow.py  debug_test.py  export.py  faq.py  final_integration_test.py  final_regression_report.py  funnel_coach.db  hypotheses_manager.py  integration_v3.py  integration_v31.py  keyboards.py  main.py  metrics.py  prd_v3_implementation_plan.md  profile.py  pyproject.toml  reflection.py  reflection_fix.py  reflection_forms.py  reflection_handlers.py  reflection_v31.py  regression_fixes.py  regression_summary.py  regression_tests.py  reminders.py  replit.md  simple_debug.py  test_button_debug.py  test_button_migration.py  test_callbacks.py  (+14 more)
attached_assets/: Pasted---1755383228101_1755383228102.txt  Pasted---1755388034789_1755388034790.txt  Pasted--0-06-PRD-v3-1-MVP--1755368891112_1755368891113.txt  Pasted--4-CVR-10-H-10-ChatGPT--1755379961693_1755379961693.txt  Pasted--4-CVR-10-H-10-ChatGPT--1755380510640_1755380510641.txt  Pasted-PRD-Replit-Telegram-Job-Funnel-Coach-Job-Funnel-Coach--1755352995601_1755352995601.txt  Pasted-PRD-v2-Telegram-Job-Funnel-Tracker-2--1755358224445_1755358224445.txt  Pasted-PRD-v3-1--1755367740223_1755367740224.txt  Pasted-PRD-v3-Telegram-Job-Funnel-Tracker-3--1755365008437_1755365008437.txt  hypotesys_1755374455420.xlsx
